# pyproject.toml
[build-system]
requires = [
    "setuptools",
    "wheel",
    "jcchelpers @ git+https://github.com/GorgiAstro/jcchelpers",
    "install-jdk"
]
build-backend = "setuptools.build_meta"

[project]
name = "jcc"
authors = [
    {name = "Andi Vajda", email = "vajda@apache.org"}
]
description = "a C++ code generator for calling Java from C++/Python"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: C++',
    'Programming Language :: Java',
    'Programming Language :: Python',
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development :: Code Generators',
    'Topic :: Software Development :: Libraries :: Java Libraries'
]
version = "3.13"
dependencies = [
    "jcchelpers @ git+https://github.com/GorgiAstro/jcchelpers"
]
